# the-blue-project

./: .gitignore  Cargo.toml  LICENSE  README.md  memory.x
bluepill/: Cargo.toml  README.md
bluepill/examples/: blink.rs  encoder.rs  gpio.rs  i2c.rs  pwm.rs  spi.rs
bluepill/src/: clock.rs  delay.rs  led.rs  lib.rs
bluepill/src/gpio/: mod.rs  mode.rs  pac.rs  pinout.rs
bluepill/src/i2c/: mod.rs  pac.rs
bluepill/src/spi/: mod.rs  pac.rs
bluepill/src/timer/: mod.rs  timer.rs
bluepill/src/timer/encoder/: channel.rs  mod.rs
bluepill/src/timer/pwm/: channel.rs  mod.rs
bluepill/src/uart/: mod.rs  pac.rs
bluepill/src/usb/: mod.rs
projects/lego-can/: Cargo.toml  README.md  gdbinit  openocd.cfg
projects/lego-can/.cargo/: config
projects/lego-can/src/: main.rs  motor_driver.rs
projects/lego-can/src/telemetry/: initialization.rs  mod.rs  sample.rs  telemetry_source.rs
